[gd_scene load_steps=8 format=3 uid="uid://v7o8nvto7jyn"]

[ext_resource type="PackedScene" uid="uid://bp3ktpd4rye8f" path="res://Scenes/subscene_manager.tscn" id="1_bnhar"]
[ext_resource type="PackedScene" uid="uid://63nui4oaaiyw" path="res://Scenes/pot_scene.tscn" id="2_luqqc"]
[ext_resource type="PackedScene" uid="uid://dju6rnicahicb" path="res://Scenes/jar_controller.tscn" id="4_77yxr"]
[ext_resource type="Script" path="res://Scripts/RecipeManager.gd" id="5_c6pvm"]
[ext_resource type="Texture2D" uid="uid://bioi8ba4jv1tj" path="res://Assets/BGs/drawer.png" id="5_lbj4n"]
[ext_resource type="Script" path="res://Scripts/MouseManager.gd" id="6_2huoc"]
[ext_resource type="Texture2D" uid="uid://c8xribwwb7tnw" path="res://Assets/Objects/Jars/Jar_Unimplemented.png" id="7_takwi"]

[node name="Game" type="Node2D"]

[node name="SubsceneManager2" parent="." instance=ExtResource("1_bnhar")]
currsubscene = 1

[node name="RecipeManager" type="Node2D" parent="SubsceneManager2"]
script = ExtResource("5_c6pvm")

[node name="PotScene" parent="SubsceneManager2" instance=ExtResource("2_luqqc")]

[node name="DrawerScene" type="Node2D" parent="SubsceneManager2"]

[node name="Drawer" type="Sprite2D" parent="SubsceneManager2/DrawerScene"]
position = Vector2(960, 540)
scale = Vector2(0.66, 0.66)
texture = ExtResource("5_lbj4n")

[node name="JarController" parent="SubsceneManager2/DrawerScene" instance=ExtResource("4_77yxr")]
position = Vector2(414, 700)

[node name="MouseManager" type="Node2D" parent="."]
script = ExtResource("6_2huoc")

[node name="JarSprite" type="Sprite2D" parent="MouseManager"]
position = Vector2(64, 35)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_takwi")

[connection signal="spices_intialized" from="SubsceneManager2/RecipeManager" to="SubsceneManager2/DrawerScene/JarController" method="_on_spice_init"]
[connection signal="spices_intialized" from="SubsceneManager2/RecipeManager" to="MouseManager" method="_on_spice_init"]
[connection signal="pot_selected" from="SubsceneManager2/PotScene" to="MouseManager" method="_on_pot_selected"]
[connection signal="item_selected" from="SubsceneManager2/DrawerScene/JarController" to="MouseManager" method="_on_spice_selected"]
[connection signal="spice_added" from="MouseManager" to="SubsceneManager2/RecipeManager" method="_on_spice_added"]
